--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>window.Kakao.init("6487531c8bc89021035aad0019a80118");</script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6487531c8bc89021035aad0019a80118&libraries=services"></script>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
